--- a/basic.html
+++ b/basic.html
@@ -8,11 +8,22 @@
 </head>
 
 <body>
-    <!-- 添加图片 -->
-    <img src="images/taylor_swift.jpg" alt="Taylor Swift">
+    <header>
+        <h1>My Trubute to Taylor Swift's 1989</h1>
+    </header>
 
-    <!-- 添加简介 -->
-    <p>Taylor Swift is an American singer-songwriter. Her music spans multiple genres, including pop, country, and indie. She is known for her heartfelt lyrics and powerful performances, and has won numerous awards throughout her career.</p>
+    <main>
+        <!-- add photo -->
+        <img src="images/taylor_swift.jpg" alt="Taylor Swift">
+
+        <!-- add description -->
+        <p>Taylor Swift is an American singer-songwriter. Her music spans multiple genres, including pop, country, and indie. She is known for her heartfelt lyrics and powerful performances, and has won numerous awards throughout her career.</p>
+    </main>
+
+    <footer>
+        <p>Created by Carter He</p>
+    </footer>
+    
 </body>
 
 </html>
