--- a/basic.html
+++ b/basic.html
@@ -18,6 +18,11 @@
 
         <!-- add description -->
         <p>Taylor Swift is an American singer-songwriter. Her music spans multiple genres, including pop, country, and indie. She is known for her heartfelt lyrics and powerful performances, and has won numerous awards throughout her career.</p>
+
+        <!-- add video -->
+        <video controls width="320" height="240">
+            <source src="video/TaylorSwift.MP4" type="video/mp4">
+            Your browser does not support the video tag.
     </main>
 
     <footer>
