--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <!-- add photo -->
-        <img src="images/taylor_swift.jpg" alt="Taylor Swift">
+        <img src="images/TaylorSwift.jpg" alt="Taylor Swift">
 
         <!-- add description -->
         <p>Taylor Swift is an American singer-songwriter. Her music spans multiple genres, including pop, country, and indie. She is known for her heartfelt lyrics and powerful performances, and has won numerous awards throughout her career.</p>
