--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <video controls width="320" height="240">
             <source src="video/TaylorSwift.MP4" type="video/mp4">
             Your browser does not support the video tag.
+        </video>
     </main>
 
     <footer>
@@ -32,7 +33,7 @@
 
     <!-- add  cat image-->
      <div id="cat-image-container">
-        <h2>Random Cat Image for Fun!</h2>>
+        <h2>Random Cat Image for Fun!</h2>
         <img id="cat-image" src="" alt="Random Cat Image">
      </div>
 
