--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <img src="images/TaylorSwift2.jpg" alt="Taylor Swift">
 
         <!-- add description -->
-        <p>Taylor Swift is an American singer-songwriter. Her music spans multiple genres, including pop, country, and indie. She is known for her heartfelt lyrics and powerful performances, and has won numerous awards throughout her career.</p>
-
+        <p>Taylor Swift is an American singer-songwriter known for her narrative-driven songwriting and genre versatility. She started in country music and transitioned to pop with her fifth studio album, *1989*, released in 2014. The album marked a significant shift in her career, embracing an '80s-inspired synth-pop sound. It features hits like *Shake It Off*, *Blank Space*, and *Style*, earning critical acclaim and winning Album of the Year at the Grammys. In 2023, Swift released *1989 (Taylor’s Version)* as part of her effort to reclaim ownership of her music.
         <!-- add video -->
         <video controls width="320" height="240">
             <source src="video/TaylorSwift.MP4" type="video/mp4">
