--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
         <img src="images/TaylorSwift2.jpg" alt="Taylor Swift">
 
         <!-- add description -->
-        <p>Taylor Swift is an American singer-songwriter known for her narrative-driven songwriting and genre versatility. She started in country music and transitioned to pop with her fifth studio album, *1989*, released in 2014. The album marked a significant shift in her career, embracing an '80s-inspired synth-pop sound. It features hits like *Shake It Off*, *Blank Space*, and *Style*, earning critical acclaim and winning Album of the Year at the Grammys. In 2023, Swift released *1989 (Taylor’s Version)* as part of her effort to reclaim ownership of her music.
+        <p>Taylor Swift is an American singer-songwriter known for her narrative-driven songwriting and genre versatility. She started in country music and transitioned to pop with her fifth studio album, "1989", released in 2014. The album marked a significant shift in her career, embracing an '80s-inspired synth-pop sound. It features hits like "Shake It Off", "Blank Space", and "Style", earning critical acclaim and winning Album of the Year at the Grammys. In 2023, Swift released "1989 (Taylor’s Version)"" as part of her effort to reclaim ownership of her music.
         <!-- add video -->
         <video controls width="320" height="240">
             <source src="video/TaylorSwift.MP4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+
+        <!-- add interactivity -->
+        <div id="interactive-element">
+            Move your mouse over this text to see the effect!
+        </div>
     </main>
 
     <footer>
@@ -55,7 +60,19 @@
            .catch(error => {
                 console.error('There has been a problem with your fetch operation:', error);
                 catImageContainer.innerHTML = '<p>Sorry, could not load a cat image. Please try again later.</p>';
-            });        
+            });
+
+    // add interactivity
+    const interactiveElement = document.getElementById('interactive-element');
+    interactiveElement.addEventListener('mousemove', function (event) {
+            // change the background color of the element based on the mouse position
+            const x = event.clientX;
+            const y = event.clientY;
+            const r = (x % 256);
+            const g = (y % 256);
+            const b = ((x + y) % 256);
+            this.style.backgroundColor = `rgb(${r}, ${g}, ${b})`;
+        });        
      </script>
     
 </body>
