--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- add interactivity -->
         <div id="interactive-element">
-            Move your mouse over this text to see the effect!
+            Move your mouse over this text to see the interactivity effect!
         </div>
     </main>
 
